# clicom

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: help-script.txt
docs/superpowers/plans/: 2026-05-03-clicom-initial-implementation.md  2026-05-07-screen-status-trailer.md  manual-smoke-recipe.md
skill/: LESSONS.md
skill/end-user-lens/: SKILL.md
skills/agent-managment/: AESTHETIC-PASS.md  FIX-DISPATCH.md  PLAN-SANITY-CHECK.md  SCAN-FOR-GAPS.md  SKILL.md  VALIDATE-PROMISED.md  WRAPPED-AGENT-IO.md
skills/agent-managment-explicit-reads/: AESTHETIC-PASS.md  FIX-DISPATCH.md  PLAN-SANITY-CHECK.md  SCAN-FOR-GAPS.md  SKILL.md  VALIDATE-PROMISED.md  WRAPPED-AGENT-IO.md
skills/agent-managment-initial/: GENERAL-TASK.md  LESSONS.md  SCRIPT-DRIVEN-ROUND.md
skills/pm-lens/: SKILL.md
skills/token-saving-strategies/: SKILL.md  installation.md
src/: lib.rs
src/clicom_cli/: cmd_clean.rs  cmd_exec_detached.rs  cmd_help.rs  cmd_mcp.rs  cmd_queue.rs  cmd_run.rs  cmd_start.rs  cmd_status.rs  cmd_whoami.rs  discovery.rs  drop.rs  mod.rs  quickops.rs
src/clicom_engine/: console_mode.rs  forwarding.rs  fs_atomic.rs  gitignore.rs  idle.rs  ids.rs  layout.rs  meta.rs  mod.rs  mouse_filter.rs  nopty.rs  nudge.rs  process.rs  pty.rs  retention.rs  rhai_host.rs  screen.rs  status_trailer.rs  watcher.rs
tests/: e2e_basic.rs  e2e_busy.rs  e2e_clean.rs  e2e_died.rs  e2e_exec_detached.rs  e2e_mcp.rs  e2e_multi_instance.rs  e2e_nopty.rs  e2e_queue.rs  e2e_quickops.rs  e2e_rhai.rs  e2e_rhai_engine.rs  e2e_screen_trailer.rs
tests/fixtures/: fake_agent.rs
(+2 files in other folders)
