[package]
name = "clicom"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "clicom"
path = "src/lib.rs"

[[bin]]
name = "clicom"
path = "src/bin/clicom.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
portable-pty = "0.8"
vt100 = "0.16"
rand = "0.8"
regex = "1"
notify = "6"
rhai = { version = "1", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
serial_test = "3"
